<resources>
    <string name="app_name">DarkStoreApp_TestTask</string>
    <string name="currency_convertor">Currency convertor</string>
    <string name="convert">Convert</string>
    <string name="convert_to">Convert to:</string>
    <string name="selected_date">Selected date:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="uah">UAH</string>
    <string name="total_result">Total: %1$s</string>
    <string name="date_of_exchange_rate">Date of exchange rate:</string>
    <string name="exchange_rate">Exchange rate:</string>
    <string name="exchange_rate_value">1 UAH = %1$s</string>
    <string name="uah_amount">%1$s UAH</string>
    <string name="no_data">There is not history yet</string>
    <string name="enter_amount_error">You should enter amount</string>

    <string name="wrong_date">The selected date cannot be greater than the current date.</string>

    <string name="no_internet_connection_message">No Internet connection</string>
    <string name="smth_went_wrong">Something went wrong</string>
    <string name="empty_body">Empty body</string>
</resources>