<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_20"
        android:gravity="center"
        android:text="@string/currency_convertor"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calendar_iv"
        android:layout_width="@dimen/dimens_30"
        android:layout_height="@dimen/dimens_30"
        android:layout_marginTop="@dimen/dimens_40"
        android:layout_marginEnd="@dimen/dimens_20"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:tint="@color/purple_500" />

    <ImageView
        android:id="@+id/history_iv"
        android:layout_width="@dimen/dimens_30"
        android:layout_height="@dimen/dimens_30"
        android:layout_marginTop="@dimen/dimens_10"
        android:layout_marginEnd="@dimen/dimens_20"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_iv"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/selected_date_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_5"
        android:layout_marginBottom="@dimen/dimens_60"
        android:text="@string/selected_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/selected_date_tv"
        app:layout_constraintTop_toTopOf="@+id/selected_date_tv"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/selected_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_10"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@+id/calendar_iv"
        app:layout_constraintEnd_toStartOf="@id/calendar_iv"
        app:layout_constraintTop_toTopOf="@+id/calendar_iv"
        tools:text="01.01.2020" />

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="@dimen/dimens_150"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_10"
        android:layout_marginBottom="@dimen/dimens_10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@color/black"
        android:theme="@style/CustomEditText"
        app:layout_constraintBottom_toTopOf="@+id/convert_to_tv"
        app:layout_constraintEnd_toStartOf="@+id/to_currency_spinner"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/to_currency_spinner"
        style="@style/CustomSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_5"
        app:layout_constraintBottom_toBottomOf="@+id/amount_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amount_et"
        app:layout_constraintTop_toTopOf="@+id/amount_et" />

    <TextView
        android:id="@+id/convert_to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginBottom="@dimen/dimens_60"
        android:text="@string/convert_to"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/total_result_tv"
        app:layout_constraintEnd_toStartOf="@+id/currency_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_5"
        android:layout_marginEnd="@dimen/dimens_20"
        android:text="@string/uah"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@+id/convert_to_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/convert_to_tv"
        app:layout_constraintTop_toTopOf="@+id/convert_to_tv" />


    <TextView
        android:id="@+id/total_result_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_40"
        android:layout_marginEnd="@dimen/dimens_20"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Total: 20000$" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_convert"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_60"
        android:layout_marginEnd="@dimen/dimens_20"
        android:text="@string/convert"
        app:layout_constraintTop_toBottomOf="@+id/total_result_tv" />

    <com.example.darkstoreapp_testtask.utils.InfoMessage
        android:id="@+id/message_im"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_20"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_convert"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>