<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimens_20"
    android:elevation="@dimen/dimens_5"
    android:background="@drawable/rounded_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date_title_tv"
        android:layout_margin="@dimen/dimens_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:text="@string/date_of_exchange_rate"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/date_tv"
        app:layout_constraintTop_toTopOf="@+id/date_title_tv"
        app:layout_constraintStart_toEndOf="@+id/date_title_tv"
        app:layout_constraintBottom_toBottomOf="@+id/date_title_tv"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_5"
        tools:text="20.12.2000"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/exchange_rate_title_tv"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_10"
        app:layout_constraintTop_toBottomOf="@+id/date_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:text="@string/exchange_rate"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/exchange_rate_tv"
        app:layout_constraintTop_toTopOf="@+id/exchange_rate_title_tv"
        app:layout_constraintStart_toEndOf="@+id/exchange_rate_title_tv"
        app:layout_constraintBottom_toBottomOf="@+id/exchange_rate_title_tv"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_5"
        tools:text="@string/uah_amount"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/exchange_rate_title_tv"
        android:layout_margin="@dimen/dimens_20"
        android:background="@color/grey_4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"/>

    <TextView
        android:id="@+id/user_amount_tv"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimens_20"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/text_size_20"
        tools:text="1000 UAH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/arrow_iv"
        app:layout_constraintTop_toBottomOf="@+id/user_amount_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/grey"
        android:layout_marginTop="@dimen/dimens_5"
        android:contentDescription="@string/app_name"
        android:layout_width="@dimen/dimens_30"
        android:layout_height="@dimen/dimens_30"
        android:src="@drawable/ic_arrow_down"/>

    <TextView
        android:id="@+id/result_amount_tv"
        app:layout_constraintTop_toBottomOf="@+id/arrow_iv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimens_5"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginBottom="@dimen/dimens_20"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/text_size_20"
        tools:text="1000 UAH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>